# interface-proxy

./: .gitattributes  LICENSE  LICENSE.txt  README.md  pyproject.toml  tox.ini
.github/: CODEOWNERS  check_version_uniqueness.py
.github/workflows/: check_version.yml  publish.yml  tox.yml
src/interface_proxy/: __init__.py  client.py  server.py
tests/integration/: server_app.py  server_app_pipe.py  server_app_tcp.py  test_run_client_tcp.py
tests/integration/test_libs/: __init__.py  library.py  parameters.py
